kubernetes/apps/network/gateways/app/gateway-public.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-public
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 200"
      alerts:
        - type: ntfy
          send-on-resolved: true
          failure-threshold: 3
          success-threshold: 5
spec:
  gatewayClassName: traefik
  addresses:
    - type: IPAddress
      value: 192.168.7.5
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.vaderrp.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: vaderrp-com-production-tls
    - name: https-shadowmorph
      protocol: HTTPS
      port: 443
      hostname: "*.shadowmorph.info"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: shadowmorph-info-production-tls
    - name: https-erinko
      protocol: HTTPS
      port: 443
      hostname: "*.erinko.fi"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: erinko-fi-production-tls
    - name: https-hietamakidojo
      protocol: HTTPS
      port: 443
      hostname: "*.hietamakidojo.fi"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: hietamakidojo-fi-production-tls
    - name: https-hietamakidojo-apex
      protocol: HTTPS
      port: 443
      hostname: "hietamakidojo.fi"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: hietamakidojo-fi-production-tls
    - name: https-ruskonkesateatteri
      protocol: HTTPS
      port: 443
      hostname: "*.ruskonkesateatteri.fi"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ruskonkesateatteri-fi-production-tls
    - name: https-ruskonkesateatteri-apex
      protocol: HTTPS
      port: 443
      hostname: "ruskonkesateatteri.fi"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: ruskonkesateatteri-fi-production-tls
