kubernetes/apps/network/gateways/app/httproute-traefik-dashboard.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: network
  labels:
    route.scope: external
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Network
    gethomepage.dev/name: Traefik
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/href: https://traefik.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=traefik
    gethomepage.dev/widget.type: traefik
    gethomepage.dev/widget.url: http://traefik.network.svc.cluster.local:9000
    gatus.home-operations.com/endpoint: |
      group: Network
      name: Traefik Dashboard
      url: "http://traefik.network.svc.cluster.local:9000/dashboard/"
spec:
  parentRefs:
    - name: gateway-public
  hostnames:
    - "traefik.vaderrp.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-warp
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-dashboard-oidc
      backendRefs:
        - name: traefik
          port: 9000
